[project]
name = "recipe-recommender"
version = "0.1.0"
description = "Structured recipe recommendations from a local LLM using Pydantic AI"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "click>=8.4.1",
    "openai>=2.43.0",
    "pydantic-ai>=1.107.0",
    "rich>=15.0.0",
]

[project.scripts]
recipe-recommender = "recipe_recommender.cli:recommend"

[dependency-groups]
dev = [
    "pytest>=8.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
